--- a/index.html
+++ b/index.html
@@ -85,23 +85,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <!-- 로고 이미지 -->
                 <img src="logo.png" alt="로고" class="logo">
-                <!-- Coming Soon 텍스트 -->
                 <h1 class="display-4 coming-soon">스프링 한국 사용자모임</h1>
                 <p class="lead">웹사이트를 구축하고 있습니다. 잠시만 기다려주세요!</p>
-                <!-- 소셜 아이콘 -->
                 <div class="social-icons mt-4 d-flex justify-content-center align-items-center">
-                    <!-- Spring 로고 -->
                     <a href="https://spring.io" target="_blank">
                         <i class="fa-solid fa-leaf"></i>
                     </a>
-                    <!-- GitHub 아이콘 -->
+                    <a href="https://developers.springkorea.dev" target="_blank">
+                        <i class="fa-solid fa-book"></i>
+                    </a>
                     <a href="https://github.com/springkorea" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
-                <!-- 로딩 애니메이션 -->
                 <div class="mt-5">
                     <i class="fas fa-spinner fa-spin fa-3x"></i>
                 </div>
