Add 503 page and update SVG logo

--- a/503.html
+++ b/503.html
@@ -3,26 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스프링 한국 사용자모임 - Comming Soon</title>
+    <title>스프링 한국 사용자모임 - 서비스 일시중단 안내</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <style>
         body {
             background-color: #1C1F23;
@@ -98,18 +81,30 @@
                         <path d="M429.642 1028.49C447.555 1043.24 450.716 1070.64 435.964 1089.61C421.212 1108.58 393.815 1110.68 374.848 1095.93C355.881 1081.18 353.773 1053.78 368.525 1034.81C383.278 1015.85 410.675 1013.74 429.642 1028.49ZM1125.1 311.956C1184.11 490.036 1255.77 766.113 1127.21 936.817C1001.82 1104.36 732.062 1047.46 560.304 1055.89C560.304 1055.89 536.257 1057.55 509.494 1060.86L506.565 1061.23C504.117 1061.55 501.652 1061.87 499.188 1062.21C499.188 1062.21 510.779 1056.94 525.531 1051.67C646.71 1009.52 703.611 1001.09 777.372 963.161C915.411 892.561 1053.45 737.663 1080.85 577.496C1028.16 731.34 867.993 864.11 722.578 917.85C622.474 954.731 442.286 990.558 442.286 990.558L434.91 986.343C312.678 926.28 308.463 660.74 531.853 575.388C629.85 537.454 722.578 558.529 829.005 533.239C941.754 506.896 1072.42 422.598 1125.1 311.956Z" fill="white"/>
                     </svg>
                 </div>
-                <h1 class="display-4 coming-soon">스프링 한국 사용자모임</h1>
-                <p class="lead">웹사이트를 구축하고 있습니다. 잠시만 기다려주세요!</p>
+                <h1 class="display-4 coming-soon">서비스 일시중단 안내</h1>
+                <p class="lead">본 홈페이지는 안정적인 서비스 제공을 위한<br>서버 재기동 작업으로 잠시 일시 중단되고 있음을 알려드립니다.<br>서비스 이용에 불편을 드려 죄송합니다.</p>
                 <div class="social-icons mt-4 d-flex justify-content-center align-items-center">
-                    <a href="https://spring.io" target="_blank">
-                        <i class="fa-solid fa-leaf"></i>
-                    </a>
-                    <a href="https://developers.springkorea.dev" target="_blank">
-                        <i class="fa-solid fa-book"></i>
-                    </a>
-                    <a href="https://github.com/springkorea" target="_blank">
-                        <i class="fab fa-github"></i>
-                    </a>
+                    <!-- Spring -->
+                    <div class="text-center mx-3">
+                        <a href="https://spring.io" target="_blank">
+                            <i class="fa-solid fa-leaf"></i>
+                        </a>
+                        <p class="mt-2">Spring</p>
+                    </div>
+                    <!-- PatchLogs -->
+                    <div class="text-center mx-3">
+                        <a href="https://developers.springkorea.dev" target="_blank">
+                            <i class="fa-solid fa-book"></i>
+                        </a>
+                        <p class="mt-2">PatchLogs</p>
+                    </div>
+                    <!-- Github -->
+                    <div class="text-center mx-3">
+                        <a href="https://github.com/springkorea" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <p class="mt-2">GitHub</p>
+                    </div>
                 </div>
                 <div class="mt-5">
                     <i class="fas fa-spinner fa-spin fa-3x"></i>
